--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,35 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        // {
+        //     "name": "Launch",
+        //     "type": "go",
+        //     "request": "launch",
+        //     "mode": "test",
+        //     "program": "${fileDirname}",
+        //     "env": {},
+        //     "args": []
+        // },
         {
-            "name": "Launch",
-            "type": "go",
+            "name": "g++.exe - 生成和调试活动文件",
+            "type": "cppdbg",
             "request": "launch",
-            "mode": "test",
-            "program": "${fileDirname}",
-            "env": {},
-            "args": []
+            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "miDebuggerPath": "C:\\mingw64\\bin\\gdb.exe",
+            "setupCommands": [
+                {
+                    "description": "为 gdb 启用整齐打印",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "C/C++: g++.exe 生成活动文件"
         }
     ]
 }
